--- a/Style/about.css
+++ b/Style/about.css
@@ -35,3 +35,21 @@ section h1{
     height: auto;
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .About{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto;
+        grid-template-areas: "title title title"
+                             "photo text-about text-about";
+        display: flex;
+        flex-direction: column;
+        align-items: center;    
+        
+    }
+    
+
+
+
+}
