--- a/Style/contact.css
+++ b/Style/contact.css
@@ -31,3 +31,29 @@ input[type=submit]:hover {
   border-radius: 5px;
   padding: 0 5% 20px 5%;
 }
+.column1{
+  
+  display: flex;
+  flex-direction: row;
+  /* change to wrap when shrink */
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.column1 label{
+  white-space: nowrap;
+}
+@media only screen and (max-width: 600px) {
+
+  .column1{
+  
+    display: flex;
+    flex-direction: row;
+    /* change to wrap when shrink */
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .column1 label{
+    white-space:normal;
+  }
+
+}
