--- a/Style/homePage.css
+++ b/Style/homePage.css
@@ -2,7 +2,7 @@ body{
 
     display: grid;
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto 300px 300px auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-areas: "Header Header Header Header"
                          "section1 section1 section1 section1"
                          "section2 section2 section2 section2"
@@ -25,7 +25,6 @@ section h2{
 section p{
     text-align: center;
     margin: 0 5% 0 5%;
-    text-align: center;
 }
 section img{
     width: 50%;
