--- a/Style/pins.css
+++ b/Style/pins.css
@@ -25,9 +25,13 @@ body{
     border: 3px;
     margin: 5px;
     padding: 10px;
-    width: 200px;
+    width: 250px;
     height: 100px;
     box-shadow: 1px 1px 3px rgb(217, 217, 217);
+}
+.PinsList li p{
+    margin: 0;
+    font-size: small;
 }
 
 
