--- a/Style/about.css
+++ b/Style/about.css
@@ -39,13 +39,13 @@ section h1{
 @media only screen and (max-width: 600px) {
     .About{
         display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: auto auto;
-        grid-template-areas: "title title title"
-                             "photo text-about text-about";
-        display: flex;
-        flex-direction: column;
-        align-items: center;    
+        display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+        "title title title"
+        "photo photo photo"
+        "text-about text-about text-about"; 
         
     }
     
