--- a/Style/about.css
+++ b/Style/about.css
@@ -1,14 +1,17 @@
 .About{
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-areas: "title title title"
-                         "photo text-about text-about";
+                         "photo text-about text-about"
+                         "title-2 title-2 title-2"
+                         "photo-2 text-about-2 text-about-2";
     
 }
-
-section h1{
+.title{
     grid-area: title;
+}
+section h1{
     font-size: 30pt;
     padding:0 5% 0 5%;
     background-color: #07c2ec;
@@ -21,31 +24,49 @@ section h1{
 
 .text-about{
     grid-area: text-about;
-    padding:0 5% 0 5%;
     
 }
+.Texts-About{
+    padding:0 5% 0 5%;
 
+}
 .photo{
     grid-area: photo;
-    padding-left: 20px;
 
 }
-.photo img{
+.Photos img{
     max-width: 300px;
     height: auto;
+    margin-left: 20px;
     border-radius: 5px;
 }
+
+.title-2{
+    grid-area:title-2 ;
+
+}
+.photo-2{
+    grid-area:photo-2 ;
+
+}
+.text-about-2{
+    grid-area:text-about-2 ;
+}
+
 
 @media only screen and (max-width: 600px) {
     .About{
         display: grid;
         display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
     grid-template-areas:
         "title title title"
-        "photo photo photo"
-        "text-about text-about text-about"; 
+        ". photo ."
+        "text-about text-about text-about"
+        "title-2 title-2 title-2"
+        ". photo-2 . "
+        "text-about-2 text-about-2 text-about-2"; 
         
     }
     
