--- a/Style/footer.css
+++ b/Style/footer.css
@@ -40,6 +40,17 @@ footer a{
     text-decoration: none;
     color: white;
  }
-footer .Social{
-    display: none;
+
+@media only screen and (max-width: 600px) {
+
+    footer{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto;
+        grid-template-areas: "Link Link Link"
+                            "Social Social Social";
+    }
+    footer .Social {
+        justify-content: flex-start;
+    }
 }
